added swagger info
